:hammer: added-html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Awsom Books</title>
+    <title>Awesome Books</title>
   </head>
   <body>
+    <main>
+      <h1>Awesome books</h1>
+      <p class="book">
+        <h5>Lorem, ipsum.</h5>
+        <small>Testeroo Testyy</small>
+        <div><button>Remove</button></div>
+        <hr>
+      </p>
+      <p class="book">
+        <h5>Lorem, ipsum.</h5>
+        <small>Testeroo Testyy</small>
+        <div><button>Remove</button></div>
+        <hr>
+      </p>
+      <form action="#">
+        <input type="text" id="title" placeholder="Title">
+        <input type="text" id="author" placeholder="Author">
+        <input type="submit" value="Add" />
+      </form>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
