:hammer: added-js-half-code

--- a/index.html
+++ b/index.html
@@ -10,18 +10,7 @@
   <body>
     <main>
       <h1>Awesome books</h1>
-      <p class="book">
-        <h5>Lorem, ipsum.</h5>
-        <small>Testeroo Testyy</small>
-        <div><button>Remove</button></div>
-        <hr>
-      </p>
-      <p class="book">
-        <h5>Lorem, ipsum.</h5>
-        <small>Testeroo Testyy</small>
-        <div><button>Remove</button></div>
-        <hr>
-      </p>
+      <div id="books"></div>
       <form action="#">
         <input type="text" id="title" placeholder="Title">
         <input type="text" id="author" placeholder="Author">
