Add input feature

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <h1>Awesome books</h1>
       <div id="books"></div>
       <form action="#">
-        <input type="text" id="title" placeholder="Title">
-        <input type="text" id="author" placeholder="Author">
-        <input type="submit" value="Add" />
+        <input type="text" id="title" placeholder="Title" />
+        <input type="text" id="author" placeholder="Author" />
+        <button type="submit" class="add">Add</button>
       </form>
     </main>
     <script src="index.js"></script>
