--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main>
       <h1>Awesome books</h1>
       <div id="books"></div>
+      <h2>Add a new book</h2>
       <form action="#">
         <input type="text" id="title" placeholder="Title" />
         <input type="text" id="author" placeholder="Author" />
